--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -28,7 +28,7 @@ endif()
 
 if(UNIX)
     include(~/vcpkg/scripts/buildsystems/vcpkg.cmake)
-    find_package(libssh REQUIRED)
-    target_link_libraries(libssh)
-    target_include_directories(service-checker PRIVATE libssh)
+    find_package(libssh CONFIG REQUIRED)
+    target_link_libraries(service-checker PRIVATE ${LIBSSH_LIBRARIES})
+    target_include_directories(service-checker PRIVATE ${LIBSSH_INCLUDE_DIRS})
 endif()
