Refactored the project slightly to remove main2.cpp

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -18,7 +18,7 @@ configure_file (
   "${PROJECT_BINARY_DIR}/service-checker.generated.h"
   )
 
-add_executable(service-checker main.cpp main2.cpp)
+add_executable(service-checker main.cpp)
 
 include_directories(${PROJECT_SOURCE_DIR} ${PROJECT_BINARY_DIR})
 
