--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -10,7 +10,7 @@ configure_file (
   "${PROJECT_SOURCE_DIR}/service-checker.hxx"
   "${PROJECT_BINARY_DIR}/service-checker.generated.h"
   )
-  
+
 # configure a header file to pass some of the CMake settings
 # to the source code
 configure_file (
@@ -28,12 +28,13 @@ endif()
 
 if(UNIX)
     include(~/vcpkg/scripts/buildsystems/vcpkg.cmake)
-    
+
     set_property(TARGET service-checker PROPERTY CXX_STANDARD 11)
-    
-    find_package(libssh CONFIG REQUIRED)
+
+    find_package(Libssh2 CONFIG REQUIRED)
     find_package(CLI11 CONFIG REQUIRED)
-    
-    target_link_libraries(service-checker PRIVATE ${LIBSSH_LIBRARIES} CLI11::CLI11)
+
+    target_link_libraries(service-checker PRIVATE Libssh2::libssh2 CLI11::CLI11)
+
     target_include_directories(service-checker PRIVATE ${LIBSSH_INCLUDE_DIRS})
 endif()
